first html page

--- a/home.html
+++ b/home.html
@@ -1,10 +1,17 @@
+<!DOCTYPE html>
 <html>
 <head>
-<tilte>
-Sachin
-</tilte>
+	<title>AISH</title>
 </head>
-<body>
-<h1>Welcome to sachin rohilla's website.</h1>
+<body background="Images/ar.jpg" >
+	<font color="white" size="10" face="Comic Sans MS">Musical.com</font><br>
+    <font size="4" color="white"> The stories of music</font> <br><hr width="20%" align="left">
+    <h4 color="white"><font color="white" face="verdaan" size="5">Love | Party | Breakup | Cool</font></h4> 
+	<font face="Bell MT" size="6"><center><h4><font color="white"><q><font color="white">YOUR<br></font> <font color="purple">HEART</font> <font color="white">IS<br> JUST A<br> BEATBOX <br>FOR THE<br> </font> <font color="blue">SONG  </font><font color="white">OF<br> YOUR <br>LIFE</font></q></font></h4></font></center>
+	<h2></h2><br>
+	<h2></h2>
+<font color="white">Copy right @ 2017 Musical Inc. All rights reserved.</font><br>
+<font color="white">Privacy Policy | Terms of use | Legal | Site Map</font>
+
 </body>
 </html>
